Añadi la función de sorteo y centre las listas

--- a/style.css
+++ b/style.css
@@ -160,3 +160,11 @@ ul {
 .button-draw:hover {
     background-color: var(--color-button-hover);
 }
+
+.amigos, li {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
